# Proto3

./: .gitignore
install/: local_setup.sh  setup.sh
install/proto3_controller/share/ament_index/resource_index/parent_prefix_path/: proto3_controller
install/proto3_controller/share/proto3_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/proto3_controller/share/proto3_controller/cmake/: proto3_controllerConfig.cmake
install/proto3_controller/share/proto3_controller/config/: proto3_controllers.yaml
install/proto3_controller/share/proto3_controller/launch/: controller.launch.py
install/proto3_description/share/proto3_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/proto3_description/share/proto3_description/meshes/: L5.STL  L6.STL  camera.STL
install/proto3_description/share/proto3_description/rviz/: display.rviz  rviz_config_file.yaml
install/proto3_description/share/proto3_description/urdf/: proto3.urdf.xacro  proto3_ros2_control.xacro
install/proto3_moveit/share/proto3_moveit/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/proto3_moveit/share/proto3_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  pilz_cartesian_limits.yaml  proto3.srdf
install/proto3_moveit/share/proto3_moveit/launch/: moveit.launch.py
log/: latest_build
src/: ros2_humble_verification_results.json
src/maintenance/: cleanup.sh  moveit_diagnostics.sh  quick_verify.sh  verify_ros2_humble_setup.py
src/proto3_controller/: CMakeLists.txt  package.xml
src/proto3_controller/launch/: controller.launch.py
src/proto3_description/: CMakeLists.txt
src/proto3_description/launch/: display.launch.py  gazebo.launch.py
src/proto3_description/meshes/: L0.STL  L1.STL  L2.STL  L3.STL  L4.STL
src/proto3_description/urdf/: proto3_gazebo.xacro
src/proto3_goal_manager/: CMakeLists.txt  package.xml
src/proto3_goal_manager/src/: goal_executor.cpp
src/proto3_goal_manager_py/: package.xml  setup.cfg  setup.py
src/proto3_goal_manager_py/proto3_goal_manager_py/: goal_executor.py
src/proto3_interfaces/: CMakeLists.txt  package.xml
src/proto3_interfaces/action/: MoveToPose.action
src/proto3_moveit/: CMakeLists.txt  package.xml
src/proto3_moveit/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml
src/proto3_moveit/launch/: moveit.launch.py
