<?xml version="1.0"?>
<package format="3">
  <name>proto3_controller</name>
  <version>0.0.0</version>
  <description>The proto3_controller package</description>
  <maintainer email="qnion.robotics@gmail.com">Prabhakar Naik</maintainer>
  <license>Apache 2.0</license>
  <author email="qnion.robotics@gmail.com">Prabhakar Naik</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>hardware_interface</depend>

  <depend>pluginlib</depend>


  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>proto3_description</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>